--- a/src/index-2.html
+++ b/src/index-2.html
@@ -46,7 +46,7 @@
         </header>
         <div class="contenedor-imgs">
             <div class="contenedor-texto">
-                <h1 class="texto-titulouno">~Institución~</h1>
+                <h1 class="texto-titulouno-htmldos">~Institución~</h1>
             </div> 
            <div class="contenedor-animado" id="contenedor-animado">
                 <div class="seccion-animada">
